# SDA_SecureDataAlliance

./: .gitignore  replace.txt
FedE/: main.py  requirements.txt  run.sh  select_data.json
FedE/flgo/: __init__.py
FedE/flgo/algorithm/: fedbase.py  fedrag-CKKS  fedrag.py
FedE/flgo/benchmark/fedrag_classification/: __init__.py  config.py  core.py
FedE/flgo/benchmark/fedrag_classification/model/: fedllm.py
FedE/flgo/benchmark/toolkits/: partition.py
FedE/flgo/benchmark/toolkits/nlp/classification/: __init__.py
FedE/flgo/simulator/: __init__.py
FedE/flgo/utils/: fflow.py  fmodule.py
FedE/num5_alpha05/: data.json  info
RAGTest/: bash.sh  bash1.sh  config.py  config.toml  index.py  main_100_test.py  main_50_test.py  main_response.py  requirements.txt
RAGTest/data/: loader.py  main.py  qa_loader.py
RAGTest/embs/: embedding.py
RAGTest/eval/: DeepEvalLocalModel.py  evaluate_TGT.py  evaluate_rag.py
RAGTest/llms/: huggingface_model.py  llm.py
RAGTest/process/: query_transform.py
finsaferag/finsaferag/: GpuOccupy.py  README.MD  __init__.py  client_app.py  client_runner.py  config.py  index.py  json2yaml.py  llm_querier.py  pyproject.toml  rag_corpus.json  requirements.txt  retriever.py  retriever_fedrag.py  run_federated_server.py  server_app.py  start_chatbot.cmd  start_chatbot.sh  task.py
finsaferag/finsaferag/api/: __init__.py  main.py  models.py  router.py
finsaferag/finsaferag/data/: data_100.json  data_50.json  data_split.py  fedrag_data_loader.py  prepare_rag_corpus.py
finsaferag/finsaferag/embs/: change.py  embedding.py
finsaferag/finsaferag/eval/: EvalModelAgent.py  evaluate_LLM.py  evaluate_TRT.py
finsaferag/finsaferag/llms/: llm.py
finsaferag/finsaferag/privacy/: __init__.py  privacy_summary.py
finsaferag/finsaferag/process/: postprocess_rerank.py  query_transform.py
finsaferag/finsaferag/ui/: __init__.py  streamlit_app.py  utils.py
